fixed footer and header on mobile

--- a/assets/css/float 2.css
+++ b/assets/css/float 2.css
@@ -201,6 +201,7 @@ footer {
 	border-top: solid;
 	border-color: #4aaaa5;
 	border-width: 5px;
+	height: 100%;
 
 }
 @media only screen and (max-width: 980px){
@@ -321,7 +322,10 @@ header {
 	background-color:#4aaaa5;
 	position:static;
 	width: 100%;
-	height: 100px;
+	height: 133px;
+	border-bottom: solid;
+	border-width: 58px;
+	border-color: white;
 }
 a {
    color:#777777;
@@ -338,6 +342,7 @@ a {
   margin-top: 70px;
   width: 100%;
   background-color: white;
+  position: static;
 }
 #Name {
     background-color:#4aaaa5;
