--- a/assets/css/float.css
+++ b/assets/css/float.css
@@ -54,6 +54,7 @@ aside {
 	border: 1px solid #eee;
 	border: ridge;
 	color: #4aaaa5;
+	margin-bottom: 30px;
 
 }
 #ContactMain {
@@ -138,6 +139,7 @@ footer {
 	border-top: solid;
 	border-color: #4aaaa5;
 	border-width: 5px;
+	height: 100%;
 
 }
 @media only screen and (max-width: 980px){
@@ -259,7 +261,10 @@ header {
 	background-color:#4aaaa5;
 	position:static;
 	width: 100%;
-	height: 100px;
+	height: 133px;
+	border-bottom: solid;
+	border-width: 58px;
+	border-color: white;
 }
 a {
    color:#777777;
@@ -268,7 +273,7 @@ a {
 #APC {
 	float: left;
   border: solid;
-  padding-right: 20px;
+  padding-right: 43px;
   padding-top: 20px;
   color:white;
   font-family: serif;
@@ -276,13 +281,14 @@ a {
   margin-top: 70px;
   width: 100%;
   background-color: white;
+  position: static;
 }
 #Name {
     background-color:#4aaaa5;
     border-color:#4aaaa5;
     color: white;
     text-align:center;
-    width: 380px;
+    width: 390px;
     height: 70px;
     font-family: serif;
     font-size: 30px;
